--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,8 @@ server.port=8080
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 logging.level.org.springframework.security=DEBUG
+spring.jackson.stream-write-constraints.max-nesting-depth=2000
+
 
 
 
